--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-OPENAI_API_KEY=
-HUGGINGFACEHUB_API_TOKEN=
+OPENAI_API_KEY= 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
+HUGGINGFACEHUB_API_TOKEN= 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
